--- a/AdministracionMinisterio/Content/Site.css
+++ b/AdministracionMinisterio/Content/Site.css
@@ -61,8 +61,8 @@ main {
 .section {
     width: 80%;
     /*background: #686868;*/
-    height:100vh;
-    overflow:scroll;
+    height: 100vh;
+    overflow: scroll;
 }
 
 
@@ -109,25 +109,43 @@ main {
     padding: 5px 17px;
     border-radius: 10px;
 }
+
     .btn-LostMemory:hover {
         color: white;
         box-shadow: 0px 0px 8px #FFB88C;
     }
 
+
+
+.btn-cherry {
+    color: white;
+    border: none !important;
+    padding: 5px 17px;
+    border-radius: 5px;
+    background: #EB3349;
+    background: -webkit-linear-gradient(to right, #F45C43, #EB3349);
+    background: linear-gradient(to right, #F45C43, #EB3349);
+}
+
+    .btn-cherry:hover {
+        color: white;
+        box-shadow: 0px 0px 8px #FFB88C;
+    }
+
+
 /* ------------------- listados -------------------------------------- */
-
-
 .carta {
     width: 350px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    box-shadow: 0px 0px 19px #A0A0A0;
+    background: #F2F2F2;
     margin: 8px;
     transition: 0.3s all ease;
 }
 
     .carta:hover {
+        box-shadow: 0px 0px 10px 2px #CECECE;
         transform: scale(1.01);
         transition: 0.3s all ease;
     }
@@ -138,7 +156,7 @@ main {
     padding: 10px 10px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    font-weight:700;
+    font-weight: 700;
 }
 
 .carta-body {
