--- a/AdministracionMinisterio/Views/Ministerios/Index.cshtml
+++ b/AdministracionMinisterio/Views/Ministerios/Index.cshtml
@@ -6,8 +6,9 @@
     <h2 class="">Ministerios</h2>
     <h5 class="">Los listados del ministerios se encuentran disponibles</h5>
 </div>
-<div class="mx-4 my-3">
+<div class="mx-4 my-3 d-flex justify-content-between align-items-center">
     @Html.ActionLink("Agregar Ministerio", "Create",null, new { @class= "btn btn-LostMemory" })
+    @Html.ActionLink("Exportar PDF", "Descargar",null, new { @class= "btn btn-cherry" , @target="_blank" })
 </div>
 
 <div class="border-bottom mx-4 mt-5">
