--- a/AdministracionMinisterio/Views/Ministros/_Formulario.cshtml
+++ b/AdministracionMinisterio/Views/Ministros/_Formulario.cshtml
@@ -10,6 +10,14 @@
     </div>
 }
 
+@if (ViewBag.ministroEncontrado != null)
+{
+    <div class="alert alert-danger">
+        @ViewBag.ministroEncontrado
+    </div>
+}
+
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -24,7 +32,7 @@
                     <label>Funcionario</label>
                     @if (Model != null)
                     {
-                        @Html.EditorFor(model => model.Funcionario.Nombre, null, new { htmlAttributes = new { @class = "form-control" , @readonly="readonly"} })
+                        @Html.EditorFor(model => model.Funcionario.Nombre, null, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                     }
                     else
                     {
@@ -35,7 +43,7 @@
             </div>
             <div class="col-sm-12 col-md-3">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.FechaDeIngreso,"Fecha de Ingreso", htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.FechaDeIngreso, "Fecha de Ingreso", htmlAttributes: new { @class = "control-label" })
                     @if (Model == null)
                     {
                         @Html.EditorFor(model => model.FechaDeIngreso, null, new { htmlAttributes = new { @class = "form-control", type = "date" } })
@@ -43,7 +51,7 @@
                     else
                     {
                         var fechaIgreso = Model.FechaDeIngreso.ToString("dd/MM/yyyy");
-                        @Html.EditorFor(model => model.FechaDeIngreso, null, new { htmlAttributes = new { @class = "form-control", type = "datetime", @Value= fechaIgreso } })
+                        @Html.EditorFor(model => model.FechaDeIngreso, null, new { htmlAttributes = new { @class = "form-control", type = "datetime", @Value = fechaIgreso } })
                     }
                     @*<input type="date" name="FechaDeIngreso" id="FechaDeIngreso" class="form-control" value="" />*@
                     @Html.ValidationMessageFor(model => model.FechaDeIngreso, "", new { @class = "text-danger" })
@@ -51,7 +59,7 @@
             </div>
             <div class="col-sm-12 col-md-3">
                 <div class="form-group">
-                    @Html.LabelFor(model => model.FechaDeEgreso,"Fecha de Egreso", htmlAttributes: new { @class = "control-label" })
+                    @Html.LabelFor(model => model.FechaDeEgreso, "Fecha de Egreso", htmlAttributes: new { @class = "control-label" })
                     @if (Model == null)
                     {
                         @Html.EditorFor(model => model.FechaDeEgreso, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
@@ -59,7 +67,7 @@
                     else
                     {
                         var fechaEgreso = Model.FechaDeEgreso.ToString("dd/MM/yyyy");
-                        @Html.EditorFor(model => model.FechaDeEgreso, new { htmlAttributes = new { @class = "form-control", @type = "datetime" , @value =fechaEgreso } })
+                        @Html.EditorFor(model => model.FechaDeEgreso, new { htmlAttributes = new { @class = "form-control", @type = "datetime", @value = fechaEgreso } })
                     }
                     @*<input type="date" name="FechaDeEgreso" id="FechaDeEgreso" class="form-control" value="" />*@
                     @Html.ValidationMessageFor(model => model.FechaDeEgreso, "", new { @class = "text-danger" })
